# maxtext-nnx

./: .gitignore  pyproject.toml  requirements.txt
MaxText/: layers.py  layers_nnx.py  max_utils.py  train.py
MaxText/aqt/jax/v2/: aqt_dot_general.py
test/: test_model.py
