[tool.poetry]
name = "maxtext-nnx"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "MaxText" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
nnx = { path = "../nnx", develop = true }
orbax-checkpoint = "^0.2.6"
absl-py = "^1.4.0"
argparse = "^1.4.0"
cloud-tpu-diagnostics = "^0.1.1"
datetime = "^5.1"
google-cloud-storage = "^2.10.0"
flax = "^0.6.11"
ml-collections = "^0.1.1"
numpy = "^1.25.0"
optax = "^0.1.5"
portpicker = "^1.5.2"
protobuf = ">=3.20.3"
pylint = "^2.17.4"
pytest = "^7.4.0"
sentencepiece = ">=0.1.97"
tensorflow-cpu = "^2.12.0"
tensorflow-datasets = "^4.9.2"
tensorboard-plugin-profile = "^2.13.0"
tensorflow-text = "^2.12.1"
tensorboardx = "^2.6.1"
python-box = "^7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
